# flatbuffers

./: build_defs_grpc.bzl  build_defs_py.bzl  helper.txt
python/nj/: BUILD.bazel  eval_flatbuffers.fbs  test.py
